Added color changes, but it's randomized atm

--- a/lightswitch.html
+++ b/lightswitch.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Browser Lightswitch</title>
+    <head> 
+        <title>Hinn's Lightswitch</title>
     </head>
     <body>
         <script src="script.js"></script>
